--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -1,4 +1,4 @@
-name: Create release with archives
+name: Build and push azure pipeline agent
 on:
   push:
     path:
@@ -16,5 +16,6 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
+          context: cicd
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/azureagent:latest
