--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -7,13 +7,14 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@master
       - name: Login to DockerHub
         uses: docker/login-action@v1 
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: test
-        script: ls -l
+        run: ls -la
       - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
