--- a/front-end/deploy.yaml
+++ b/front-end/deploy.yaml
@@ -17,3 +17,15 @@ spec:
         image: nginx:1.12
         ports:
         - containerPort: 80
+---
+kind: Service
+apiVersion: v1
+metadata:
+  name: nginx
+spec:
+  selector:
+    app: nginx
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 80
