--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,8 +6,7 @@
 trigger:
 - dev
 
-pool:
-  vmImage: ubuntu-latest
+pool: Default
 steps:
 - script: echo Hello, world!
   displayName: 'Run a one-line scriptd'
