--- a/front-end/deploy.yaml
+++ b/front-end/deploy.yaml
@@ -39,7 +39,7 @@ metadata:
     kubernetes.io/ingress.class: addon-http-application-routing
 spec:
   rules:
-  - #host: test.ru
+  - host: nhl.ef1e6b3388f24af0a900.northeurope.aksapp.io
     http:
       paths:
       - path: /
