--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,23 +4,36 @@
 # https://aka.ms/yaml
 
 trigger:
-- dev
+  branches:
+   include:
+     - dev
+  paths:
+    include:
+      - front-end
 
 pool: Default
 steps:
-- task: Kubernetes@1
+
+- task: Docker@2
   inputs:
-    connectionType: 'Azure Resource Manager'
-    azureSubscriptionEndpoint: 'main_rg'
-    azureResourceGroup: 'main'
-    kubernetesCluster: 'aks-dev'
-    useClusterAdmin: true
-    namespace: 'default'
-    command: 'apply'
-    useConfigurationFile: true
-    configuration: 'front-end/deploy.yaml'
-    secretType: 'dockerRegistry'
-    containerRegistryType: 'Azure Container Registry'
+    containerRegistry: 'acr'
+    repository: 'dev'
+    command: 'buildAndPush'
+    Dockerfile: 'front-end/Dockerfile'
+
+#- task: Kubernetes@1
+#  inputs:
+#    connectionType: 'Azure Resource Manager'
+#    azureSubscriptionEndpoint: 'main_rg'
+#    azureResourceGroup: 'main'
+#    kubernetesCluster: 'aks-dev'
+#    useClusterAdmin: true
+#    namespace: 'default'
+#    command: 'apply'
+#    useConfigurationFile: true
+#    configuration: 'front-end/deploy.yaml'
+#    secretType: 'dockerRegistry'
+#    containerRegistryType: 'Azure Container Registry'
 
 #- script: |
 #    echo Add other tasks to build, test, and deploy your project.
