upd docker agent

--- a/cicd/Dockerfile
+++ b/cicd/Dockerfile
@@ -15,11 +15,12 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     libicu60 \
     libunwind8 \
     netcat \
-    docker \
     libssl1.0 \
   && rm -rf /var/lib/apt/lists/*
 
 RUN curl -LsS https://aka.ms/InstallAzureCLIDeb | bash \
+  && curl -fsSL https://get.docker.com -o get-docker.sh \
+  && sh get-docker.sh \
   && rm -rf /var/lib/apt/lists/*
 
 ARG TARGETARCH=amd64
