--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,7 @@ steps:
 - task: Docker@2
   inputs:
     containerRegistry: 'acr'
-    repository: 'dev'
+    repository: 'nhl_fe'
     command: 'buildAndPush'
     Dockerfile: 'front-end/Dockerfile'
 
