--- a/azure-fe-dev.yml
+++ b/azure-fe-dev.yml
@@ -19,32 +19,9 @@ steps:
 - task: Docker@2
   inputs:
     containerRegistry: 'acr'
-    repository: 'nhl_fe'
+    repository: 'nhl_fe_dev'
     command: 'buildAndPush'
     Dockerfile: 'front-end/Dockerfile'
-
----
-
-trigger:
-  branches:
-   include:
-     - dev
-  paths:
-    include:
-      - back-end
-
-#pool: Default
-pool:
-  vmImage: ubuntu-20.04
-steps:
-
-- task: Docker@2
-  inputs:
-    containerRegistry: 'acr'
-    repository: 'nhl_be'
-    command: 'buildAndPush'
-    Dockerfile: 'back-end/Dockerfile'
-
 
 #- task: Kubernetes@1
 #  inputs:
