--- a/kubernetes/dev.yaml
+++ b/kubernetes/dev.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: nhl-fe
-        image: nhl_fe_dev
+        image: acrzt2fx0ax.azurecr.io/nhl_fe_dev
         ports:
         - containerPort: 80
 ---
