--- a/azure-fe-dev.yml
+++ b/azure-fe-dev.yml
@@ -23,7 +23,7 @@ steps:
     repository: 'nhl_fe_dev'
     command: 'buildAndPush'
     Dockerfile: 'front-end/Dockerfile'
-    tags: startsWith(variables['Build.SourceBranch'], 'refs/tags/')
+    tags: $(Build.SourceBranchName)
 
 #- task: Kubernetes@1
 #  inputs:
