--- a/azure-fe-dev.yml
+++ b/azure-fe-dev.yml
@@ -17,13 +17,15 @@ pool:
   vmImage: ubuntu-20.04
 steps:
 
+- script: VERSION_TAG=`git tag --sort=-creatordate` && echo "##vso[task.setvariable variable=VERSION_TAG]$VERSION_TAG"
+  displayName: Define VERSION_TAG variable
 - task: Docker@2
   inputs:
     containerRegistry: 'acr'
     repository: 'nhl_fe_dev'
     command: 'buildAndPush'
     Dockerfile: 'front-end/Dockerfile'
-    tags: $(Build.SourceBranchName)
+    tags: $(VERSION_TAG)
 
 #- task: Kubernetes@1
 #  inputs:
