--- a/azure-helm.yml
+++ b/azure-helm.yml
@@ -10,39 +10,16 @@ trigger:
      - dev
   paths:
     include:
-      - front-end
+      - helm
 
 #pool: Default
 pool:
   vmImage: ubuntu-20.04
 steps:
-
-# - script: VERSION_TAG=`git tag --sort=-creatordate` && echo "##vso[task.setvariable variable=VERSION_TAG]$VERSION_TAG"
-- script: VERSION_TAG=`git describe --tags` && echo "##vso[task.setvariable variable=VERSION_TAG]$VERSION_TAG"
-  displayName: Define VERSION_TAG variable
-- task: Docker@2
+- task: ArchiveFiles@2
   inputs:
-    containerRegistry: 'acr'
-    repository: 'nhl_fe_dev'
-    command: 'buildAndPush'
-    Dockerfile: 'front-end/Dockerfile'
-    tags: $(VERSION_TAG)
-
-#- task: Kubernetes@1
-#  inputs:
-#    connectionType: 'Azure Resource Manager'
-#    azureSubscriptionEndpoint: 'main_rg'
-#    azureResourceGroup: 'main'
-#    kubernetesCluster: 'aks-dev'
-#    useClusterAdmin: true
-#    namespace: 'default'
-#    command: 'apply'
-#    useConfigurationFile: true
-#    configuration: 'front-end/deploy.yaml'
-#    secretType: 'dockerRegistry'
-#    containerRegistryType: 'Azure Container Registry'
-
-#- script: |
-#    echo Add other tasks to build, test, and deploy your project.
-#    echo See https://aka.ms/yaml
-#  displayName: 'Run a multi-line script'
+    rootFolderOrFile: '$(Build.BinariesDirectory)/helm'
+    includeRootFolder: false
+    archiveType: 'zip'
+    archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
+    replaceExistingArchive: true
