--- a/azure-helm.yml
+++ b/azure-helm.yml
@@ -32,6 +32,7 @@ steps:
 - task: PublishPipelineArtifact@1
   inputs:
 #    targetPath: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
-    targetPath: '$(Build.ArtifactStagingDirectory)/helm.zip'
+    targetPath: '$(Build.SourcesDirectory)/helm'
+#    targetPath: '$(Build.ArtifactStagingDirectory)/helm.zip'
 #    artifact: 'helm.zip'
     publishLocation: 'pipeline'
