--- a/azure-helm.yml
+++ b/azure-helm.yml
@@ -34,5 +34,5 @@ steps:
 #    targetPath: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
     targetPath: '$(Build.SourcesDirectory)/helm'
 #    targetPath: '$(Build.ArtifactStagingDirectory)/helm.zip'
-#    artifact: 'helm.zip'
+    artifact: 'helm.zip'
     publishLocation: 'pipeline'
