--- a/back-end/Dockerfile
+++ b/back-end/Dockerfile
@@ -3,4 +3,4 @@ RUN apt-get update && apt-get -y install php7.3-fpm php7.3-mysql && rm -rf /var/
 COPY include/40-php-fpm.sh  /docker-entrypoint.d/
 COPY include/site.conf /etc/nginx/conf.d/default.conf
 COPY include/nginx.conf /etc/nginx/nginx.conf
-COPY src /opt/app
+COPY src /opt/app/api
