--- a/helm/dev/templates/ingress.yml
+++ b/helm/dev/templates/ingress.yml
@@ -6,7 +6,7 @@ metadata:
     kubernetes.io/ingress.class: addon-http-application-routing
 spec:
   rules:
-  - # host: {{ .Values.ingress.host }}
+  - host: {{ .Values.ingress.host }}
     http:
       paths:
       - path: /
