--- a/helm/dev/values.yaml
+++ b/helm/dev/values.yaml
@@ -4,14 +4,14 @@ fe:
   label: fe
   name: nhl-fe
   replicas: 2
-#  image: nhl_fe_dev
+  image: nhl_fe_dev
 #  tag: 1.3
 
 be:
   label: be
   name: nhl-be
   replicas: 2
-#  image: nhl_be_dev
+  image: nhl_be_dev
 #  tag: 1.3
   path: "/api"
 
@@ -30,14 +30,13 @@ adminpass: Aa123456
 #  user:
 #  pass:
 
-resources: {
- limits:
-   cpu: 100m
-   memory: 128Mi
- requests:
-   cpu: 100m
-   memory: 128Mi
-}
+resources:
+  limits:
+    cpu: 100m
+    memory: 128Mi
+  requests:
+    cpu: 100m
+    memory: 128Mi
 
 autoscaling:
   enabled: false
