--- a/helm/dev/templates/configmap.yml
+++ b/helm/dev/templates/configmap.yml
@@ -3,7 +3,7 @@ kind: ConfigMap
 metadata:
   name: appconfig
 data:
-  appconfig: |
+  appconfig: "
 <?php
     $dbhost = "{{ .Values.db.host }}";
     $dbname = "{{ .Values.db.name }}";
@@ -11,4 +11,4 @@ data:
     $dbpass = "{{ .Values.db.pass }}";
     $adminpass = "{{ .Values.adminpass }}";
 ?>
-
+"
