--- a/test/azure.yml
+++ b/test/azure.yml
@@ -16,4 +16,10 @@ trigger:
 pool:
   vmImage: ubuntu-20.04
 steps:
-- script: 
+- script:
+    res=0
+    for file in $( find . -type f -name '*.php' ); do
+      php -l "$file" || res=1
+    done
+    if [ $res != 0 ]; then echo "##vso[task.logissue type=error]PHP syntax error."
+    exit $res
