--- a/test/azure.yml
+++ b/test/azure.yml
@@ -21,5 +21,5 @@ steps:
     for file in $( find . -type f -name '*.php' ); do
       php -l "$file" || res=1
     done
-    if [ $res != 0 ]; then echo "##vso[task.logissue type=error]PHP syntax error."
+    if [ $res != 0 ]; then echo "##vso[task.logissue type=error]PHP syntax error."; fi
     exit $res
