--- a/test/azure.yml
+++ b/test/azure.yml
@@ -2,9 +2,6 @@
 # Start with a minimal pipeline that you can customize to build and deploy your code.
 # Add steps that build, run tests, deploy, and more:
 # https://aka.ms/yaml
-variables:
-- name: path
-  value: test
 
 trigger:
   batch: true
@@ -18,11 +15,11 @@ trigger:
 #pool: Default
 pool:
   vmImage: ubuntu-20.04
+
 steps:
 - script: |
-    #!/bin/bash
     res=0
-    for file in $( find test -type f -name '*.php' ); do
+    for file in $( find . -type f -name '*.php' ); do
       php -l "$file" || res=1
     done
     if [ $res != 0 ]; then echo "##vso[task.logissue type=error]PHP syntax error."; fi
