--- a/test/azure.yml
+++ b/test/azure.yml
@@ -1,11 +1,3 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
-variables:
-- name: bpath
-  value: test
-
 trigger:
   batch: true
   branches:
@@ -19,14 +11,29 @@ trigger:
 pool:
   vmImage: ubuntu-20.04
 
+variables:
+- name: bpath
+  value: test
+
 steps:
 - script:
     VERSION_TAG=`git describe --tags` && echo "##vso[task.setvariable variable=VERSION_TAG]$VERSION_TAG"
   displayName: Define VERSION_TAG variable
-- script: |
+
+- displayName: Lint PHP files
+  script: |
     res=0
-    for file in $( find $( bpath ) -type f -name '*.php' ); do
+    for file in $( find $( testpath ) -type f -name '*.php' ); do
       php -l "$file" || res=1
     done
-    if [ $res != 0 ]; then echo "##vso[task.logissue type=error]PHP syntax error."; fi
+    if [ $res != 0 ]; then echo "##vso[task.logissue type=error]PHP syntax error."
+    else
+      echo "$VERSION_TAG">version_tag
+    fi
     exit $res
+
+- task: PublishPipelineArtifact@1
+  inputs:
+    targetPath: '$(Build.ArtifactStagingDirectory)/version_tag'
+    artifact: 'version_tag'
+    publishLocation: 'pipeline'
