--- a/back-end/azure-be-dev.yml
+++ b/back-end/azure-be-dev.yml
@@ -21,8 +21,7 @@ steps:
 - script: VERSION_TAG=`git describe --tags` && echo "##vso[task.setvariable variable=VERSION_TAG]$VERSION_TAG"
   displayName: Define VERSION_TAG variable
 
-- displayName: Lint PHP files
-  script: |
+- script: |
     res=0
     for file in $( find $( testpath ) -type f -name '*.php' ); do
       php -l "$file" || res=1
@@ -32,6 +31,7 @@ steps:
       echo "$VERSION_TAG">version_tag
     fi
     exit $res
+  displayName: Lint PHP files
 
 - task: Docker@2
   inputs:
