--- a/test/azure.yml
+++ b/test/azure.yml
@@ -20,8 +20,7 @@ steps:
     VERSION_TAG=`git describe --tags` && echo "##vso[task.setvariable variable=VERSION_TAG]$VERSION_TAG"
   displayName: Define VERSION_TAG variable
 
-- displayName: Lint PHP files
-  script: |
+- script: |
     res=0
     for file in $( find $( testpath ) -type f -name '*.php' ); do
       php -l "$file" || res=1
@@ -31,6 +30,7 @@ steps:
       echo "$VERSION_TAG">version_tag
     fi
     exit $res
+  displayName: Lint PHP files
 
 - task: PublishPipelineArtifact@1
   inputs:
