--- a/test/azure.yml
+++ b/test/azure.yml
@@ -36,5 +36,5 @@ steps:
 - task: PublishPipelineArtifact@1
   inputs:
     targetPath: 'version_tag'
-    artifact: 'version_tag'
+#    artifact: 'version_tag'
     publishLocation: 'pipeline'
