--- a/front-end/azure-fe-dev.yml
+++ b/front-end/azure-fe-dev.yml
@@ -23,7 +23,7 @@ steps:
 
 - script: |
     res=0
-    for file in $( find $( testpath ) -type f -name '*.php' ); do
+    for file in $( find ${{ variables.testpath }} -type f -name '*.php' ); do
       php -l "$file" || res=1
     done
     if [ $res != 0 ]; then echo "##vso[task.logissue type=error]PHP syntax error."
