--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -19,4 +19,4 @@ jobs:
         with:
           context: cicd
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/azureagent:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/azureagent:1.1-buildkit
