--- a/azureagent/azureagent/templates/agents.yaml
+++ b/azureagent/azureagent/templates/agents.yaml
@@ -3,33 +3,33 @@ kind: Deployment
 metadata:
   name: azagent
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: azagent
-  env:
-    AZP_URL: https://dev.azure.com/vujo3
-    AZP_AGENT_NAME: k8sagent
-    AZP_TOKEN: ***
   template:
     metadata:
       labels:
         app: azagent
     spec:
       containers:
-      - name: azure_agent
-        image: cywl/azureagent:latest
+{{- range .Values.containers }}
+      - name: azureagent
+        image: {{ $.Values.iamge }}
+        securityContext:
+          privileged: true
         env:
-          name: AZP_URL
+        - name: AZP_URL
           value: https://dev.azure.com/vujo3
-          name: AZP_AGENT_NAME
-          value: k8sagent
-          name: AZP_TOKEN
-          value: 
+        - name: AZP_AGENT_NAME
+          value: "k8sagent-{{ . }}"
+        - name: AZP_TOKEN
+          value: {{ $.Values.azp_token }}
 #        ports:
 #        - containerPort: 80
-
+{{- end }}    
 
 
 
 # AZP_URL=https://dev.azure.com/vujo3 -e AZP_TOKEN=$1 -e AZP_AGENT_NAME=mydockeragent cywl/azureagent:latest
+
