--- a/helm/dev/values.yaml
+++ b/helm/dev/values.yaml
@@ -5,14 +5,14 @@ fe:
   label: fe
   name: nhl-fe
   replicas: 2
-  image: nhl_fe_dev
+#  image: nhl_fe_dev
 #  tag: 1.3
 
 be:
   label: be
   name: nhl-be
   replicas: 2
-  image: nhl_be_dev
+#  image: nhl_be_dev
 #  tag: 1.3
   path: "/api"
 
@@ -21,7 +21,7 @@ registry: "acrzt2fx0ax.azurecr.io"
 
 ingress:
   name: web
-  host: dev.nhl.appw.ru
+#  host: dev.nhl.appw.ru
 
 adminpass: Aa123456
 #db:
