--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -17,6 +17,6 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          context: cicd
+          context: azureagent
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/azureagent:1.1-buildkit
