--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -2,7 +2,7 @@ name: Build and push azure pipeline agent
 on:
   push:
     path:
-      - 'azureagent'
+      - 'azureagent/image'
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -17,6 +17,6 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          context: azureagent
+          context: azureagent/image
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/azureagent:1.1-buildkit
