--- a/helm/azure-helm-dev.yml
+++ b/helm/azure-helm-dev.yml
@@ -7,8 +7,8 @@ trigger:
     include:
       - helm
 
-pool: #Default
-  vmImage: ubuntu-20.04
+pool: Default
+#  vmImage: ubuntu-20.04
 
 steps:
 - task: ArchiveFiles@2
