--- a/front-end/azure-fe-dev.yml
+++ b/front-end/azure-fe-dev.yml
@@ -33,13 +33,14 @@ steps:
     exit $res
   displayName: Lint PHP files
 
-- task: Docker@2
-  inputs:
-    containerRegistry: 'acr'
-    repository: 'nhl_fe_dev'
-    command: 'buildAndPush'
-    Dockerfile: 'front-end/Dockerfile'
-    tags: $(VERSION_TAG)
+- script: |
+  mkdir /root/.docker
+  echo "{\"auths\":{\"$(acr-host)\":{\"auth\":\"`echo -n "acr-user:acr-pass" | base64`\"}}} >/root/.docker/config.json
+  export DOCKERCONFIG=/root/.docker
+  buildkitd &
+  buildctl build --frontend=dockerfile.v0 --local context=front-end --local dockerfile=front-end \
+  --output type=image,name=$(acr-host)/nhl_fe_dev:$(VERSION_TAG),push=true
+
 
 - task: PublishPipelineArtifact@1
   inputs:
