--- a/front-end/azure-fe-dev.yml
+++ b/front-end/azure-fe-dev.yml
@@ -34,8 +34,9 @@ steps:
 
 - script: |
     mkdir /root/.docker
-    echo "{\"auths\":{\"$(acr-host)\":{\"auth\":\"`echo -n "acr-user:acr-pass" | base64`\"}}} >/root/.docker/config.json" >/root/.docker/config.json
+    echo "{\"auths\":{\"$(acr-host)\":{\"auth\":\"`echo -n "acr-user:acr-pass" | base64`\"}}}" >/root/.docker/config.json
     export DOCKERCONFIG=/root/.docker
+    echo $DOCKERCONFIG
     buildkitd &
     sleep 10
     buildctl build --frontend=dockerfile.v0 --local context=front-end --local dockerfile=front-end --output type=image,name=$(acr-host)/nhl_fe_dev:$VERSION_TAG,push=true
