--- a/front-end/azure-fe-dev.yml
+++ b/front-end/azure-fe-dev.yml
@@ -34,6 +34,7 @@ steps:
 
 - script: |
     mkdir /root/.docker
+    echo -n "$(acr-user):$(acr-pass)" | base64 -w0
     echo "{\"auths\":{\"$(acr-host)\":{\"auth\":\"`echo -n "$(acr-user):$(acr-pass)" | base64 -w0`\"}}}" >/root/.docker/config.json
     export DOCKERCONFIG=/root/.docker
     echo $DOCKERCONFIG
