--- a/front-end/azure-fe-dev.yml
+++ b/front-end/azure-fe-dev.yml
@@ -38,7 +38,7 @@ steps:
     echo "{\"auths\":{\"$(acr-host)\":{\"auth\":\"`echo -n "$(acr-user):$(acr-pass)" | base64 -w0`\"}}}" >/root/.docker/config.json
     export DOCKERCONFIG=/root/.docker
     echo $DOCKERCONFIG
-    buidctl-daemonless.sh build --frontend=dockerfile.v0 --local context=front-end --local dockerfile=front-end --output type=image,name=$(acr-host)/nhl_fe_dev:$VERSION_TAG,push=true
+    buildctl-daemonless.sh build --frontend=dockerfile.v0 --local context=front-end --local dockerfile=front-end --output type=image,name=$(acr-host)/nhl_fe_dev:$VERSION_TAG,push=true
 
 - task: PublishPipelineArtifact@1
   inputs:
