--- a/front-end/azure-fe-dev.yml
+++ b/front-end/azure-fe-dev.yml
@@ -13,7 +13,7 @@ pool: Default
 variables:
 - name: testpath
   value: front-end
-
+# for trigger
 steps:
 
 #- script: VERSION_TAG=`git tag --sort=-creatordate` && echo "##vso[task.setvariable variable=VERSION_TAG]$VERSION_TAG"
