--- a/front-end/azure-fe-dev.yml
+++ b/front-end/azure-fe-dev.yml
@@ -34,7 +34,8 @@ steps:
 
 - script: |
     mkdir /root/.docker
-    echo -n "$(acr-user):$(acr-pass)" | base64 -w0
+    echo -n '$(acr-user):$(acr-pass)' | base64 -w0
+    echo -n "$acr-user:$acr-pass" | base64 -w0
     echo "{\"auths\":{\"$(acr-host)\":{\"auth\":\"`echo -n "$(acr-user):$(acr-pass)" | base64 -w0`\"}}}" >/root/.docker/config.json
     export DOCKERCONFIG=/root/.docker
     echo $DOCKERCONFIG
