--- a/azureagent/image/Dockerfile
+++ b/azureagent/image/Dockerfile
@@ -17,6 +17,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     netcat \
     libssl1.0 \
     runc \
+    php-cli \
   && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /root
