--- a/helm/dev/values.yaml
+++ b/helm/dev/values.yaml
@@ -39,7 +39,7 @@ resources:
     memory: 128Mi
 
 autoscaling:
-  enabled: false
+  enabled: true
   minReplicas: 2
   maxReplicas: 20
   targetCPUUtilizationPercentage: 80
