--- a/helm/dev/templates/hpa.yml
+++ b/helm/dev/templates/hpa.yml
@@ -4,7 +4,7 @@ kind: HorizontalPodAutoscaler
 metadata:
   name: {{ .Values.label }}
   labels:
-    {{ .Values.label }}
+    - {{ .Values.label }}
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
