--- a/front-end/azure-fe-dev.yml
+++ b/front-end/azure-fe-dev.yml
@@ -13,7 +13,6 @@ pool: Default
 variables:
 - name: testpath
   value: front-end
-# for trigger
 
 steps:
 
@@ -35,11 +34,12 @@ steps:
 
 - script: |
     mkdir /root/.docker
+    echo "one"
     echo -n '$(acr-user):$(acr-pass)' | base64 -w0
+    echo "two"
     echo -n "$acr-user:$acr-pass" | base64 -w0
     echo "{\"auths\":{\"$(acr-host)\":{\"auth\":\"`echo -n "$(acr-user):$(acr-pass)" | base64 -w0`\"}}}" >/root/.docker/config.json
     export DOCKERCONFIG=/root/.docker
-    echo $DOCKERCONFIG
     buildctl build --frontend=dockerfile.v0 --local context=front-end --local dockerfile=front-end --output type=image,name=$(acr-host)/nhl_fe_dev:$VERSION_TAG,push=true
 
 - task: PublishPipelineArtifact@1
