--- a/back-end/include/site.conf
+++ b/back-end/include/site.conf
@@ -1,11 +1,12 @@
 server {
     listen 80;
     index index.php index.html;
-	set $php_sock unix:/var/run/php/php7.3-fpm.sock;
+    set $php_sock unix:/var/run/php/php7.3-fpm.sock;
     server_name localhost;
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
     root /opt/app;
+    add_header Access-Control-Allow-Origin https://dev.nhl.appw.ru https://www.nhl.appw.ru;
 
     location ~ \.php$ {
         try_files $uri =404;
