--- a/back-end/include/site.conf
+++ b/back-end/include/site.conf
@@ -6,7 +6,7 @@ server {
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
     root /opt/app;
-    add_header Access-Control-Allow-Origin https://dev.nhl.appw.ru https://www.nhl.appw.ru;
+#    add_header Access-Control-Allow-Origin https://dev.nhl.appw.ru https://www.nhl.appw.ru;
 
     location ~ \.php$ {
         try_files $uri =404;
