fix kubectl exec

--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -19,5 +19,5 @@ jobs:
         with:
           context: azureagent/image
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/azureagent:1.2-buildkit
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/azureagent:1.2-pack
 
