--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -22,6 +22,9 @@ jobs:
         pushd iac
         tar -caf ../infrastructure.tar.gz --exclude-vcs --exclude-vcs-ignores *
         popd
+        tag=`cat iac/version`
+        echo $tag
+        echo "::set-env name=tag::$tag"
     - name: Upload artifact
       uses: actions/upload-artifact@v2
       with:
@@ -31,4 +34,5 @@ jobs:
       uses: ncipollo/release-action@v1
       with:
         artifacts: "infrastructure.tar.gz"
+        tag: $tag
         token: ${{ secrets.GITHUB_TOKEN }}
