Update azure-fe-dev.yml for Azure Pipelines

--- a/front-end/azure-fe-dev.yml
+++ b/front-end/azure-fe-dev.yml
@@ -7,8 +7,8 @@ trigger:
     include:
       - front-end
 
-pool: Default
-#  vmImage: ubuntu-20.04
+pool: #Default
+  vmImage: ubuntu-20.04
 
 variables:
 - name: testpath
