Update azure-fe-dev.yml for Azure Pipelines

--- a/front-end/azure-fe-dev.yml
+++ b/front-end/azure-fe-dev.yml
@@ -7,8 +7,8 @@ trigger:
     include:
       - front-end
 
-pool: #Default
-  vmImage: ubuntu-20.04
+pool: Default
+#  vmImage: ubuntu-20.04
 
 variables:
 - name: testpath
@@ -47,15 +47,3 @@ steps:
     targetPath: 'version_tag'
     artifact: 'version_tag'
     publishLocation: 'pipeline'
-
-- task: SonarQubePrepare@4
-  inputs:
-    SonarQube: 'sonar'
-    scannerMode: 'CLI'
-    configMode: 'manual'
-    cliProjectKey: 'nhl'
-    cliSources: '.'
-- task: SonarQubeAnalyze@4
-- task: SonarQubePublish@4
-  inputs:
-    pollingTimeoutSec: '300'
